--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}Home{% endblock %}
+{% block body_class %}home-page{% endblock %}
 
 {% block content %}
 <section class="landing-hero">
@@ -8,12 +9,12 @@
         <p class="hero-subtext">Your gateway to fast, transparent, and digital municipal services.</p>
 
         {% if not current_user.is_authenticated %}
-            <a href="{{ url_for('auth.register') }}" class="btn primary-btn">🚀 Get Started</a>
+            <a href="{{ url_for('auth.register') }}" class="btn primary-btn"> Get Started</a>
         {% else %}
             {% if current_user.role == 'admin' %}
-                <a href="{{ url_for('admin.admin_home') }}" class="btn primary-btn">📊 Go to Dashboard</a>
+                <a href="{{ url_for('admin.admin_home') }}" class="btn primary-btn"> Go to Dashboard</a>
             {% else %}
-                <a href="{{ url_for('main.dashboard') }}" class="btn primary-btn">🏠 Go to Dashboard</a>
+                <a href="{{ url_for('main.dashboard') }}" class="btn primary-btn"> Go to Dashboard</a>
             {% endif %}
         {% endif %}
     </div>
