--- a/app/templates/track_result.html
+++ b/app/templates/track_result.html
@@ -1,20 +1,24 @@
 {% extends 'base.html' %}
 {% block title %}Tracking Result{% endblock %}
+{% block body_class %}tracking-page{% endblock %}
 
 {% block content %}
-<div class="form-container">
-    <h2>Tracking Result</h2>
+<div class="tracking-container">
+  <h2>Tracking Result</h2>
 
+  <div class="tracking-card">
     <table>
-        <tr><th>Tracking Number:</th><td>{{ request.tracking_number }}</td></tr>
-        <tr><th>User ID:</th><td>{{ request.user_id }}</td></tr>
-        <tr><th>Document Type:</th><td>{{ request.document_type }}</td></tr>
-        <tr><th>Purpose:</th><td>{{ request.purpose }}</td></tr>
-        <tr><th>Status:</th><td>{{ request.status }}</td></tr>
-        <tr><th>Date Requested:</th><td>{{ request.date_requested.strftime('%Y-%m-%d') }}</td></tr>
+      <tr><th>Tracking Number:</th><td>{{ request.tracking_number }}</td></tr>
+      <tr><th>User ID:</th><td>{{ request.user_id }}</td></tr>
+      <tr><th>Document Type:</th><td>{{ request.document_type }}</td></tr>
+      <tr><th>Purpose:</th><td>{{ request.purpose }}</td></tr>
+      <tr><th>Status:</th><td>{{ request.status }}</td></tr>
+      <tr><th>Date Requested:</th><td>{{ request.date_requested.strftime('%Y-%m-%d') }}</td></tr>
     </table>
+  </div>
 
-    <br>
-    <a href="{{ url_for('track.track_request') }}" class="btn">🔙 Track Another</a>
+  <div class="btn-wrapper">
+    <a href="{{ url_for('track.track_request') }}" class="track-btn">Track Another</a>
+  </div>
 </div>
 {% endblock %}
